[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/actors/AI.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 118.017

[node name="AI" type="Node2D"]
position = Vector2( 4, 4 )
script = ExtResource( 1 )

[node name="DetectionZone" type="Area2D" parent="."]
position = Vector2( -1, -4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
visible = false
shape = SubResource( 1 )

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_DetectionZone_body_exited"]
[connection signal="timeout" from="PatrolTimer" to="." method="_on_PatrolTimer_timeout"]
